--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -23,7 +23,7 @@
         <!-- // This embed code adds your fonts and live Typecast CSS to the page -->
         <script type="text/javascript" src="http://typecast.com/project_css/z833ncKCNq/496130e48d3777.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     </head>
 
 <body>
@@ -35,15 +35,16 @@
     <p>
 
 	<script language="JavaScript">
+     document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':1880' +  '/ui" >Node Red UI Desktop [user]</a><br/>' );
+	 document.write('<br/>');
      document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':10000' +  '" >Webmin Adminstrator [root]</a><br/>' );
      document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':1880' +  '" >Node Red Control Panel [admin]</a><br/>' );
-     document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':1880' +  '/ui" >Node Red UI Desktop [user]</a><br/>' );
 	 </script>
 	<a target="_blank" href="/phpliteadmin">SQLite Administrator</a><br/>
 	<a target="_blank" href="/phpsysinfo">System Information</a><br/>
-	<a target="_blank" href="https://bitbucket.org/scargill/esp-mqtt-dev/raw/master/Hackitt-and-Bodgitt-ESP.doc">Download the Home Control Doc File</a><br/>	
-        <a target="_blank" href="http://techblog.nemiak.de">Oli's Techblog</a><br/>
-        <a target="_blank" href="http://tech.scargill.net">Pete's technical website</a><br/>
+	<br/>
+    <a target="_blank" href="http://techblog.nemiak.de">Oli's Techblog</a><br/>
+    <a target="_blank" href="http://tech.scargill.net">Pete's technical website</a><br/>
 	</p>
   </article>
 
