--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -37,8 +37,10 @@
 	<script language="JavaScript">
      document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':1880' +  '/ui" >Node Red UI Desktop [user]</a><br/>' );
 	 document.write('<br/>');
-     document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':10000' +  '" >Webmin Adminstrator [root]</a><br/>' );
      document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':1880' +  '" >Node Red Control Panel [admin]</a><br/>' );
+	 document.write('<br/>');
+     document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':10000' +  '" >Webmin Adminstrator [root]</a><br/>' );
+     document.write('<a target="_blank" href="' + window.location.protocol + '//' + window.location.hostname + ':82' +  '" >HA Bridge []</a><br/>' );
 	 </script>
 	<a target="_blank" href="/phpliteadmin">SQLite Administrator</a><br/>
 	<a target="_blank" href="/phpsysinfo">System Information</a><br/>
